[tool.poetry]
name = "matrix"
version = "0.3.0"
license = "ISC"
description = "Weechat protocol script for Matrix."
authors = ["Damir Jelić <poljar@termina.org.uk>"]
packages = [
    { include = "matrix" },
    { include = "contrib/*.py", format = "sdist" },
    { include = "main.py", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"
pyOpenSSL = "^19.1.0"
webcolors = "^1.11.1"
atomicwrites = "^1.3.0"
future = "^0.18.2"
attrs = "^19.3.0"
logbook = "^1.5.3"
pygments = "^2.6.1"
matrix-nio = { version = "^0.18.0", extras = [ "e2e" ] }
python-magic = { version = "^0.4.15", optional = true }
aiohttp = { version = "^3.6.2", optional = true }
requests = { version = "^2.23.0", optional = true }
typing = { version = "^3.7.4", python = "<3.5" }

[tool.poetry.extras]
matrix_decrypt = ["requests"]
matrix_sso_helper = ["aiohttp"]
matrix_upload = ["python-magic", "requests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
